; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_message.c_get_emsg_source.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_message.c_get_emsg_source.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sourcing_name = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [36 x i8] c"Error detected while processing %s:\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @get_emsg_source to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_emsg_source() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = load i32*, i32** @sourcing_name, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %6, label %30

6:                                                ; preds = %0
  %7 = call i64 (...) @other_sourcing_name()
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %30

9:                                                ; preds = %6
  %10 = call i64 @_(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  %11 = inttoptr i64 %10 to i32*
  store i32* %11, i32** %3, align 8
  %12 = load i32*, i32** @sourcing_name, align 8
  %13 = call i64 @STRLEN(i32* %12)
  %14 = load i32*, i32** %3, align 8
  %15 = call i64 @STRLEN(i32* %14)
  %16 = add nsw i64 %13, %15
  %17 = trunc i64 %16 to i32
  %18 = call i32* @alloc(i32 %17)
  store i32* %18, i32** %2, align 8
  %19 = load i32*, i32** %2, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %28

21:                                               ; preds = %9
  %22 = load i32*, i32** %2, align 8
  %23 = bitcast i32* %22 to i8*
  %24 = load i32*, i32** %3, align 8
  %25 = bitcast i32* %24 to i8*
  %26 = load i32*, i32** @sourcing_name, align 8
  %27 = call i32 @sprintf(i8* %23, i8* %25, i32* %26)
  br label %28

28:                                               ; preds = %21, %9
  %29 = load i32*, i32** %2, align 8
  store i32* %29, i32** %1, align 8
  br label %31

30:                                               ; preds = %6, %0
  store i32* null, i32** %1, align 8
  br label %31

31:                                               ; preds = %30, %28
  %32 = load i32*, i32** %1, align 8
  ret i32* %32
}

declare dso_local i64 @other_sourcing_name(...) #1

declare dso_local i64 @_(i8*) #1

declare dso_local i32* @alloc(i32) #1

declare dso_local i64 @STRLEN(i32*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
